--- a/Zombie Menu/desserts.html
+++ b/Zombie Menu/desserts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Main Dishes</title>
+        <title>Desserts</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE-edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -39,14 +39,32 @@
             </div>
         </div>
         <div class="footer">
-            <p>Credits</p>
-            <ul>
-                <li><a href="https://www.freepik.com/free-vector/abstract-background-with-dark-texture_1076068.htm#query=scary%20black%20background&position=30&from_view=search&track=ais">Image by Harryarts</a> on Freepik</li>
-                <li><a href="https://www.freepik.com/free-vector/watercolour-smoke-background_22039585.htm#query=green%20halloween%20background&position=14&from_view=keyword&track=ais">Image by VecMes</a> on Freepik</li>
-                <li><a href="https://www.freepik.com/free-vector/creepy-green-zombie-cartoon-style_40859477.htm#query=zombies&position=15&from_view=keyword&track=sph&uuid=dfcea755-e2f8-4af6-b89b-db5dec1aca19">Image by brgfx</a> on Freepik</li>
-                <li><a href="https://www.clipartmax.com/download/m2i8H7H7i8Z5H7H7_zombie-hand/#">Image</a> on clipartmax</li>
-                <li><a href="https://www.1001fonts.com/shlop-font.html">Font </a>by Raymond Larabie</li>
-            </ul>
+            <div class="credits">
+                <p>Credits</p>
+                <ul>
+                    <li><a href="https://www.freepik.com/free-vector/abstract-background-with-dark-texture_1076068.htm#query=scary%20black%20background&position=30&from_view=search&track=ais">Image by Harryarts</a> on Freepik</li>
+                    <li><a href="https://www.freepik.com/free-vector/watercolour-smoke-background_22039585.htm#query=green%20halloween%20background&position=14&from_view=keyword&track=ais">Image by VecMes</a> on Freepik</li>
+                    <li><a href="https://www.freepik.com/free-vector/creepy-green-zombie-cartoon-style_40859477.htm#query=zombies&position=15&from_view=keyword&track=sph&uuid=dfcea755-e2f8-4af6-b89b-db5dec1aca19">Image by brgfx</a> on Freepik</li>
+                    <li><a href="https://www.clipartmax.com/download/m2i8H7H7i8Z5H7H7_zombie-hand/#">Image</a> on clipartmax</li>
+                    <li><a href="https://www.1001fonts.com/shlop-font.html">Font </a>by Raymond Larabie</li>
+                </ul>
+            </div>
+            <div class="hours">
+                <p>Hours</p>
+                <ul>
+                    <li>Mon: 10am-1am</li>
+                    <li>Tue: 10am-1am</li>
+                    <li>Wed: 10am-1am</li>
+                    <li>Thu: 10am-1am</li>
+                    <li>Fri: 10am-3am</li>
+                    <li>Sat: 10am-3am</li>
+                    <li>Sun: 10am-1am</li>
+                </ul>
+            </div>
+            <div class="info">
+                <p>928 Spooky Lane Radnor, PA 18734</p>
+                <p>Contact Us<br>225-348-3938</p>
+            </div>
         </div>
     </body>
 </html>
