--- a/appetizers.html
+++ b/appetizers.html
@@ -16,7 +16,7 @@
         <div class="main">
             <div class = "navbar">
                 <li><a href="C:\Users\Jalen\OneDrive\Zombie Menu\appetizers.html">Appetizers</a></li>
-                <li><a href="C:\Users\Jalen\OneDrive\Zombie Menu\Main_dishes.html">Main Dishes</a></li>
+                <li><a href="Main_dishes.html">Main Dishes</a></li>
                 <li><a href="C:\Users\Jalen\OneDrive\Zombie Menu\desserts.html">Desserts</a></li>
             </div>
             <div class="food">
