--- a/desserts.html
+++ b/desserts.html
@@ -15,7 +15,7 @@
         </div>
         <div class="main">
             <div class = "navbar">
-                <li><a href="C:\Users\Jalen\OneDrive\Zombie Menu\appetizers.html">Appetizers</a></li>
+                <li><a href="appetizers.html">Appetizers</a></li>
                 <li><a href="C:\Users\Jalen\OneDrive\Zombie Menu\Main_dishes.html">Main Dishes</a></li>
                 <li><a href="C:\Users\Jalen\OneDrive\Zombie Menu\desserts.html">Desserts</a></li>
             </div>
