--- a/desserts.html
+++ b/desserts.html
@@ -17,7 +17,7 @@
             <div class = "navbar">
                 <li><a href="appetizers.html">Appetizers</a></li>
                 <li><a href="Main_dishes.html">Main Dishes</a></li>
-                <li><a href="C:\Users\Jalen\OneDrive\Zombie Menu\desserts.html">Desserts</a></li>
+                <li><a href="desserts.html">Desserts</a></li>
             </div>
             <div class="food">
                 <div class = "category">
