--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <button class="button">Appetizers</button>
                 </a>
                 <a href="Main_dishes.html">
-                    <button class="button">Entrées</button>
+                    <button class="button">Main Dishes</button>
                 </a>
                 <a href="desserts.html">
                     <button class="button">Desserts</button>
