--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <body>
         <div class="title">
             <h1 data-heading="Diner for the Dead">Diner<br>For<br>The<br>Dead</h1>
+            <div class="navbar">
+                <li><a href="appetizers.html">Appetizers</a></li>
+                <li><a href="Main_dishes.html">Main Dishes</a></li>
+                <li><a href="desserts.html">Desserts</a></li>
+            </div>
             <div class="buttons">
                 <a href="appetizers.html">
                     <button class="button">Appetizers</button>
