--- a/appetizers.html
+++ b/appetizers.html
@@ -25,7 +25,7 @@
                 </div>
                 <div><b>Shrimp Temporal</b>
                     <br> The Shrimp Temporal is a sushi dish that consists of pieces of temporal lobe wrapped in seaweed and rice. 
-                    Topped with soy sauce, wasabi, and ginger. Enjoy this delicious appetizer to improve your hearing and sound processing. As well as enhancing
+                    This great appetizer is topped with soy sauce, wasabi, and ginger. Enjoy this delicious appetizer to improve your hearing and sound processing. As well as enhancing
                     the limited ability of language processing that a zombie might have. 13.99
                 </div>
                 <div><b>Frontal Frittata</b><br> Try our excellent Frontal Frittata made with 6 eggs, frontal lobe, roasted peppers, and spinach.
@@ -36,7 +36,7 @@
                     This hot dish will make your sense of touch better than it has ever been before. As you eat this pizza you will
                     thoroughly enjoy the texture of this delightful dish. 16.99
                 </div>
-                <div><b>Occipital Oatmeal</b><br>Our Occipital Oatmeal will be a perfect opening act four your main dish. With a mixture of
+                <div><b>Occipital Oatmeal</b><br>Our Occipital Oatmeal will be a perfect opening act for your main dish. With a mixture of
                     granola, cinnamon, brown sugar, occipital lobe and raisins, your vision will be sure to improve. This deal will make you feel like 
                     you can see a mile. 10.99
                 </div>
