--- a/desserts.html
+++ b/desserts.html
@@ -23,7 +23,7 @@
                 <div class = "category">
                     <h1>Desserts</h1>
                 </div>
-                <div><b>Broca's Banana Split</b><br>This treat consists of a banana, three sccops of ice cream, whipped cream, and chunks of brain that comes from Broca's area. After eating this dessert, you will see improvement in language comprehension, speech production, and hand movement.
+                <div><b>Broca's Banana Split</b><br>This treat consists of a banana, three scoops of ice cream, whipped cream, and chunks of brain that comes from Broca's area. After eating this dessert, you will see improvement in language comprehension, speech production, and hand movement.
                     Never drop your food or let your victim get away again and enjoy this cold dessert! 11.99
                 </div>
                 <div><b>Hypothalamus Honey Cake</b><br>This mysterious treat is a cake layered with honey and topped with chunks of hypothalamus. The cake will surely help you stay motivated and stay in tune with your emotions.
