--- a/Main_dishes.html
+++ b/Main_dishes.html
@@ -25,10 +25,10 @@
                 </div>
                 <div><b>Wernicke's Wings</b>
                     <br>Enjoy our breaded chicken wings served with a dip made of blended up parts of Wernicke's area. Your langauage comprehension and production
-                    will benefit from consumption of these wings. This breaded masterpiece will allow you to communicate with your fellow zombies a whole lot better.
-                    Or even give your next victim a heads up! This dish can come with 6 or 12 wings. 8.99|15.99
+                    will benefit from consumption of these wings. This breaded masterpiece will allow you to communicate with your fellow zombies a whole lot better,
+                    or even give your next victim a heads up! This dish can come with 6 or 12 wings. 8.99|15.99
                 </div>
-                <div><b>Eye Muscle Macaroni</b><br>You will love this dish of tubular pasta mixed with cheddar cheese. Topped with bacon and chopped up eye muscles.
+                <div><b>Eye Muscle Macaroni</b><br>You will love this dish of tubular pasta mixed with cheddar cheese. It's topped with bacon and chopped up eye muscles.
                     This dish will be sure to improve your vision to help you spot your next victim. Enjoy this cheesy meal while your future victims wait in fear. 12.99
                 </div>
                 <div><b>Basal Ganglia Gumbo</b><br>This hot stew will definitely blow your taste buds away. This dish made of vegetables, chicken, sausage,
