--- a/appetizers.html
+++ b/appetizers.html
@@ -37,8 +37,8 @@
                     thoroughly enjoy the texture of this delightful dish. 16.99
                 </div>
                 <div><b>Occipital Oatmeal</b><br>Our Occipital Oatmeal will be a perfect opening act for your main dish. With a mixture of
-                    granola, cinnamon, brown sugar, occipital lobe and raisins, your vision will be sure to improve. This deal will make you feel like 
-                    you can see a mile. 10.99
+                    granola, cinnamon, brown sugar, occipital lobe and raisins, your vision will be sure to improve. This meal will help you see your victims from a mile away. 
+                    10.99
                 </div>
             </div>
         </div>
